tests/baselines/reference/parserGreaterThanTokenAmbiguity18.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity18.ts (1 errors) ====
    1 >>>/**/= 2;
             ~
!!! parserGreaterThanTokenAmbiguity18.ts(1,10): error TS1005: 'expression' expected.